# coffee

./: .gitignore  Dockerfile  README.md  coffee-development.cfg.sample  docker-compose.yml  pyproject.toml
coffee/: default_settings.py
coffee/cmd/: web.py
coffee/models/: __init__.py  coffee.py  qrbot.py  user.py
coffee/utils/: config.py
coffee/web/: __init__.py  acl.py  caches.py
coffee/web/forms/: __init__.py  accounts.py  coffee.py  fields.py  qrcodes.py  user_roles.py
coffee/web/static/: package-lock.json  package.json
coffee/web/templates/accounts/: login.html  register.html
coffee/web/templates/admin/accounts/: edit_roles.html  index.html  register.html  setup-password.html
coffee/web/templates/admin/base/: error-handler.html  html-renderer.html
coffee/web/templates/admin/menus/: index.html  menu-create-edit.html
coffee/web/templates/admin/qrcodes/: index.html  qrcode-create-edit.html
coffee/web/templates/base/: base-layout.html  default-page.html  footer.html  home-page.html  navbar.html
coffee/web/templates/detail/: index.html
coffee/web/templates/home/: index.html
coffee/web/templates/menus/: index.html
coffee/web/views/: __init__.py  accounts.py  home.py  menu.py
coffee/web/views/admin/: __init__.py  accounts.py  menu.py  qrcode.py
scripts/: init-admin.py  run-web
