[tool.poetry]
name = "coffee"
version = "0.1.0"
description = ""
authors = ["oPECHo <opecho0280@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
flask-login = "^0.6.3"
pillow = "^10.2.0"
flask-wtf = "^1.2.1"
flask-me = "^1.0.2"
flask-caching = "^2.0.2"
logger = "^1.4"
flask-bcrypt = "^1.0.1"
email-validator = "^2.1.1"


[tool.poetry.scripts]
coffee-web = "coffee.cmd.web:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
